// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Content Test isOpen 1`] = `
<Backdrop
  className=""
>
  <Bullseye
    className=""
    component="div"
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
        }
      }
      paused={false}
      tag="div"
    >
      <ModalBox
        className=""
        id="id"
        isLarge={false}
        title="Test Modal Content title"
      >
        <ModalBoxCloseButton
          className=""
          onClose={[Function]}
        />
        <ModalBoxHeader
          className=""
        >
           
          Test Modal Content title
           
        </ModalBoxHeader>
        <ModalBoxBody
          className=""
          id="id"
        >
          This is a ModalBox header
        </ModalBoxBody>
      </ModalBox>
    </FocusTrap>
  </Bullseye>
</Backdrop>
`;

exports[`Modal Content Test only body 1`] = `
<Backdrop
  className=""
>
  <Bullseye
    className=""
    component="div"
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
        }
      }
      paused={false}
      tag="div"
    >
      <ModalBox
        className=""
        id="id"
        isLarge={false}
        title="Test Modal Content title"
      >
        <ModalBoxCloseButton
          className=""
          onClose={[Function]}
        />
        <ModalBoxHeader
          className=""
        >
           
          Test Modal Content title
           
        </ModalBoxHeader>
        <ModalBoxBody
          className=""
          id="id"
        >
          This is a ModalBox header
        </ModalBoxBody>
      </ModalBox>
    </FocusTrap>
  </Bullseye>
</Backdrop>
`;

exports[`Modal Content Test with footer 1`] = `
<Backdrop
  className=""
>
  <Bullseye
    className=""
    component="div"
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
        }
      }
      paused={false}
      tag="div"
    >
      <ModalBox
        className=""
        id="id"
        isLarge={false}
        title="Test Modal Content title"
      >
        <ModalBoxCloseButton
          className=""
          onClose={[Function]}
        />
        <ModalBoxHeader
          className=""
        >
           
          Test Modal Content title
           
        </ModalBoxHeader>
        <ModalBoxBody
          className=""
          id="id"
        >
          This is a ModalBox header
        </ModalBoxBody>
        <ModalBoxFooter
          className=""
        >
           
          Testing
           
        </ModalBoxFooter>
      </ModalBox>
    </FocusTrap>
  </Bullseye>
</Backdrop>
`;

exports[`Modal Content Test with header 1`] = `
<Backdrop
  className=""
>
  <Bullseye
    className=""
    component="div"
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
        }
      }
      paused={false}
      tag="div"
    >
      <ModalBox
        className=""
        id="id"
        isLarge={false}
        title="Test Modal Content title"
      >
        <ModalBoxCloseButton
          className=""
          onClose={[Function]}
        />
        <ModalBoxHeader
          className=""
        >
           
          Test Modal Content title
           
        </ModalBoxHeader>
        <ModalBoxBody
          className=""
          header="Testing"
          id="id"
        >
          This is a ModalBox header
        </ModalBoxBody>
      </ModalBox>
    </FocusTrap>
  </Bullseye>
</Backdrop>
`;

exports[`Modal Content Test with header and footer 1`] = `
<Backdrop
  className=""
>
  <Bullseye
    className=""
    component="div"
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
        }
      }
      paused={false}
      tag="div"
    >
      <ModalBox
        className=""
        id="id"
        isLarge={false}
        title="Test Modal Content title"
      >
        <ModalBoxCloseButton
          className=""
          onClose={[Function]}
        />
        <ModalBoxHeader
          className=""
        >
           
          Test Modal Content title
           
        </ModalBoxHeader>
        <ModalBoxBody
          className=""
          header="Testing header"
          id="id"
        >
          This is a ModalBox header
        </ModalBoxBody>
        <ModalBoxFooter
          className=""
        >
           
          Testing footer
           
        </ModalBoxFooter>
      </ModalBox>
    </FocusTrap>
  </Bullseye>
</Backdrop>
`;

exports[`Modal Content Test with onclose 1`] = `
<Backdrop
  className=""
>
  <Bullseye
    className=""
    component="div"
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
        }
      }
      paused={false}
      tag="div"
    >
      <ModalBox
        className=""
        id="id"
        isLarge={true}
        title="Test Modal Content title"
      >
        <ModalBoxCloseButton
          className=""
          onClose={[Function]}
        />
        <ModalBoxHeader
          className=""
        >
           
          Test Modal Content title
           
        </ModalBoxHeader>
        <ModalBoxBody
          className=""
          header="Testing header"
          id="id"
          onclose={[Function]}
        >
          This is a ModalBox header
        </ModalBoxBody>
        <ModalBoxFooter
          className=""
        >
           
          Testing footer
           
        </ModalBoxFooter>
      </ModalBox>
    </FocusTrap>
  </Bullseye>
</Backdrop>
`;

exports[`Modal Content test without footer 1`] = `
<Backdrop
  className=""
>
  <Bullseye
    className=""
    component="div"
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
        }
      }
      paused={false}
      tag="div"
    >
      <ModalBox
        className=""
        id="id"
        isLarge={false}
        title="Test Modal Content title"
      >
        <ModalBoxCloseButton
          className=""
          onClose={[Function]}
        />
        <ModalBoxHeader
          className=""
        >
           
          Test Modal Content title
           
        </ModalBoxHeader>
        <ModalBoxBody
          className=""
          id="id"
        >
          This is a ModalBox header
        </ModalBoxBody>
      </ModalBox>
    </FocusTrap>
  </Bullseye>
</Backdrop>
`;
